--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Api for mailchimp submission",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "install-dependencies": "npm install && cd client && npm install",
@@ -25,7 +26,8 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mailchimp-api-v3": "^1.15.0"
+    "mailchimp-api-v3": "^1.15.0",
+    "vite-plugin-require": "^1.2.14"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.0"
