[updated vercel.json]

--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,9 @@
       "config": {
         "distDir": "build"
       }
+    },
+    {
+      "ignoreBuildErrors": true
     }
   ],
   "routes": [
