[updated vercel.json]

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
+
+  "build": {
+    "ignoreBuildErrors": true
+  },
   "builds": [
     {
       "src": "/index.js",
@@ -11,9 +15,6 @@
       "config": {
         "distDir": "build"
       }
-    },
-    {
-      "ignoreBuildErrors": true
     }
   ],
   "routes": [
