--- a/vercel.json
+++ b/vercel.json
@@ -2,33 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "/index.js",
-      "use": "@vercel/node"
-    },
-    {
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
-        "distDir": "dist"
+        "distDir": "client/dist"
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/index.js"
-    },
-    {
-      "src": "^/static/(.*)",
-      "dest": "/client/static/$1"
-    },
-    {
-      "src": "/(.*)\\.png",
-      "dest": "/client/$1.png"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/client/public/index.html"
+      "dest": "/client/dist/$1"
     }
   ]
 }
