--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,10 @@
   "version": 2,
   "builds": [
     {
+      "src": "/index.js",
+      "use": "@vercel/node"
+    },
+    {
       "src": "client/package.json",
       "use": "@vercel/static-build",
       "config": {
@@ -10,6 +14,18 @@
     }
   ],
   "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.js"
+    },
+    {
+      "src": "^/static/(.*)",
+      "dest": "/client/static/$1"
+    },
+    {
+      "src": "/(.*)\\.png",
+      "dest": "/client/dist/$1.png"
+    },
     {
       "src": "/(.*)",
       "dest": "/client/dist/index.html"
