--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     {
-      "src": "/index.js",
+      "src": "index.js",
       "use": "@vercel/node"
     },
     {
@@ -15,15 +15,11 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/index.js"
+      "src": "/assets/(.*)",
+      "dest": "/client/dist/assets/$1"
     },
     {
-      "src": "/(.*)",
-      "dest": "/client/dist/$1"
-    },
-    {
-      "src": "/(.*)",
+      "src": "/",
       "dest": "/client/dist/index.html"
     }
   ]
