--- a/package.json
+++ b/package.json
@@ -1,35 +1,45 @@
 {
-  "name": "wait",
-  "version": "1.0.0",
-  "description": "Api for mailchimp submission",
-  "main": "index.js",
+  "name": "sabertooth",
+  "private": true,
+  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "install-dependencies": "npm install && cd client && npm install",
-    "vercel-build": " cd client && npm run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "vercel-build": " npm run build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Deonorla/sabertooth.git"
-  },
-  "keywords": [
-    "Deonorla"
-  ],
-  "author": "Sabertooth co",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Deonorla/sabertooth/issues"
-  },
-  "homepage": "https://github.com/Deonorla/sabertooth#readme",
   "dependencies": {
-    "dotenv": "^16.3.1",
+    "@types/swiper": "^5.4.3",
+    "dotenv": "^16.4.5",
+    "framer-motion": "^11.11.11",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-spinners": "^0.14.1",
+    "sweetalert2": "^11.14.5",
+    "sweetalert2-react-content": "^5.0.7",
+    "swiper": "^11.1.14",
     "express": "^4.18.2",
     "mailchimp-api-v3": "^1.15.0",
     "vite-plugin-require": "^1.2.14"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0"
+    "@eslint/js": "^9.13.0",
+    "@types/node": "^22.9.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.13.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.11.0",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.14",
+    "typescript": "~5.6.2",
+    "typescript-eslint": "^8.11.0",
+    "vite": "^5.4.10"
   }
 }
