--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "vercel-build": "npm run build",
     "preview": "vite preview"
   },
   "dependencies": {
